# cog_rob_project

./: .gitignore  haarcascade_lowerbody.xml.1  midterm_report.MD
devel/: .catkin  .rosinstall
devel/lib/museum_guide/: explorer_node
devel/lib/people_detection/: people_detection
devel/lib/pkgconfig/: astra_camera.pc  estop.pc  laser_proc.pc  museum_guide.pc  my_map_saver.pc  my_robot_control.pc  navigation_goals_pyt.pc  p3dx_description.pc  people_detection.pc  qr_code_reading.pc  rc_amcl.pc  rc_gmapping.pc  rc_simul_worlds.pc  rgbd_launch.pc  rosaria.pc  try.pc  turtlebot3_bringup.pc  turtlebot3_description.pc  turtlebot3_example.pc  turtlebot3_fake.pc  turtlebot3_gazebo.pc  turtlebot3_msgs.pc  turtlebot3_navigation.pc  turtlebot3_slam.pc  turtlebot3_teleop.pc  urg_c.pc  urg_node.pc
devel/lib/qr_code_reading/: reading_image
devel/lib/turtlebot3_bringup/: turtlebot3_diagnostics
devel/lib/turtlebot3_example/: turtlebot3_marker_server  turtlebot3_obstacle  turtlebot3_server  turtlebot3_sonar
map/: map_museum.pgm  map_museum.yaml  mymap.pgm  mymap.yaml
navigation_goals_pyt/: CMakeLists.txt
src/museum_guide/: CMakeLists.txt
src/museum_guide_with_person/: CMakeLists.txt
src/my_map_saver/: CMakeLists.txt
src/my_robot_control/: locations.yaml  room_labels.yaml
src/navigation_goals_pyt/: package.xml
src/people_detection/: CMakeLists.txt
src/qr_code_reading/: CMakeLists.txt  package.xml
src/rc_amcl/: CMakeLists.txt  package.xml
src/rc_gmapping/: CMakeLists.txt
src/rc_simul_worlds/: CMakeLists.txt  package.xml
src/try/: CMakeLists.txt
(+137 files in other folders)
